--- a/app/views/pages/cadastroadm.ejs
+++ b/app/views/pages/cadastroadm.ejs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/cadastroadm.css">
     <link rel="icon" href="/imagens/brilhoescuro.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Prata&family=Raleway:wght@300;400;500;600&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <!-- Header Mobile -->
