--- a/app/views/pages/menuvendedor.ejs
+++ b/app/views/pages/menuvendedor.ejs
@@ -70,6 +70,7 @@
                     </section>
                     <nav class="profile-menu">
                         <a href="#" class="active">Geral</a>
+                        <a href="/perfilvender">Perfil do Vendedor</a>
                         <a href="/informacao">Informação da conta</a>
                         <a href="/sacola1">Sacola</a>
                         <a href="/minhascomprasdesktop">Minhas compras</a>
