--- a/app/views/pages/homeadm.ejs
+++ b/app/views/pages/homeadm.ejs
@@ -7,14 +7,21 @@
   <link rel="stylesheet" href="/css/estilo.css">
   <link rel="stylesheet" href="/css/profile-sections.css">
   <link rel="icon" href="/imagens/brilhoescuro.png" type="image/x-icon">
+  <style>
+    .sidebar-menu li img {
+      width: 90px !important;
+      height: 90px !important;
+      object-fit: contain !important;
+    }
+  </style>
 </head>
 
 <body>
-                                  <!-- Banner 10% off-->
+                                <!-- Banner 10% off-->
     <section class="discount-banner">
       <span class="highlight">10% OFF Na primeira compra</span>
     </section>
-                                <!-- Cabeçalho da página-->
+                              <!-- Cabeçalho da página-->
   <br>
   <section class="oculto-mobile">
     <header class="main-header">
@@ -73,15 +80,15 @@
             <aside class="sidebar-menu">
               <ul>
                 <li>
-                  <a href="/vistoriapedidos"><img src="imagens/check.svg" alt="Pedidos"></a>
+                  <a href="/vistoriapedidos"><img src="imagens/check_icon.svg" alt="Pedidos"></a>
                   Pedidos
                 </li>
                 <li>
-                  <a href="/produtosadm"><img src="imagens/add produto.svg" alt="Produtos"></a>
+                  <a href="/produtosadm"><img src="imagens/add_icon.svg" alt="Produtos"></a>
                   Produtos
                 </li>
                 <li>
-                  <a href="/administradorperfis"><img src="imagens/adm.svg" alt="Perfis"></a>
+                  <a href="/administradorperfis"><img src="imagens/adm_icon.svg" alt="Perfis"></a>
                   Administrador de Perfis
                 </li>
                 <li>
@@ -93,11 +100,11 @@
                   Perfil Premium
                 </li>
                 <li>
-                  <a href="/blogadm"><img src="imagens/blog.svg" alt="Blog"></a>
+                  <a href="/blogadm"><img src="imagens/blog_icon.svg" alt="Blog"></a>
                   Blog
                 </li>
                 <li>
-                  <a href="/estatisticaadm"><img src="imagens/estatistica.png" alt="Estatísticas"></a>
+                  <a href="/estatisticaadm"><img src="imagens/estatísticas_icon.svg" alt="Estatísticas"></a>
                   Estatísticas
                 </li>
               </ul>
