--- a/app/public/css/perfilvender.css
+++ b/app/public/css/perfilvender.css
@@ -116,7 +116,8 @@ nav a {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 10px;
+  margin-top: 10px; 
+  padding: 11px;
 }
 
 .profile-img {
