--- a/app/views/pages/artigo.ejs
+++ b/app/views/pages/artigo.ejs
@@ -26,7 +26,7 @@
             <section class="user-actions">
                 <input type="text" placeholder="Buscar..." class="search-box">
                 <img src="imagens/icone saco.png" alt="Sacola">
-                <a href="/cadastro"><img src="imagens/icone sem cadastro.png" alt="Perfil" class="maria"></a>
+                <a href="/cadastro"><img src="/imagens/imagem sem cadastro.avif" alt="Perfil" class="maria"></a>
                 <img src="imagens/icone coraçao.png" alt="Favoritos">
             </section>
         </nav>
