--- a/app/views/pages/buscar.ejs
+++ b/app/views/pages/buscar.ejs
@@ -31,7 +31,7 @@
                     <input type="text" name="q" placeholder="Buscar...">
                 </form>
                 <ul>
-                    <li><a href="/cadastro"><img src="imagens/icone sem cadastro.png" class="maria"></a></li>
+                    <li><a href="/cadastro"><img src="/imagens/imagem sem cadastro.avif" class="maria"></a></li>
                     <li><a href="/sacola1"><img src="imagens/icone saco.png" class="img-tamanho"></a></li>
                     <li><a href="/favoritos"><img src="imagens/icone coraçao.png" class="img-tamanho2"></a></li>
                 </ul>
