--- a/app/views/pages/finalizandocompra.ejs
+++ b/app/views/pages/finalizandocompra.ejs
@@ -24,7 +24,7 @@
           </a>
         <% } else { %>
           <a href="javascript:void(0)" onclick="goBack()">
-            <img src="/imagens/icone sem cadastro.png" alt="Perfil" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;">
+            <img src="/imagens/imagem sem cadastro.avif" alt="Perfil" style="width: 40px; height: 40px; border-radius: 50%; object-fit: cover;">
           </a>
         <% } %>
       </nav>
@@ -154,7 +154,7 @@
               <% if (autenticado && autenticado.imagem) { %>
                 <img src="/<%= autenticado.imagem %>" class="maria">
               <% } else { %>
-                <img src="imagens/icone sem cadastro.png" class="img-tamanho">
+                <img src="/imagens/imagem sem cadastro.avif" class="img-tamanho">
               <% } %>
             </a></li>
             <li><a href="/favoritos"><img src="imagens/icone coraçao.png" class="img-tamanho"></a></li>
