--- a/app/views/pages/categorias.ejs
+++ b/app/views/pages/categorias.ejs
@@ -36,7 +36,7 @@
                         <% if (typeof autenticado !== 'undefined' && autenticado) { %>
                             <a href="/perfilcliente"><img src="<%= autenticado.imagem ? '/' + autenticado.imagem : '/imagens/imagem sem cadastro.avif' %>" class="maria"></a>
                         <% } else { %>
-                            <a href="/menu"><img src="/imagens/imagem sem cadastro.avif" class="maria"></a>
+                            <a href="/cadastro"><img src="/imagens/imagem sem cadastro.avif" class="maria"></a>
                         <% } %>
                     </li>
                     <li><a href="/favoritos"><img src="imagens/icone coraçao.png" class="img-tamanho"></a></li>
@@ -53,7 +53,7 @@
                     <img src="imagens/seta.png" class="seta-voltar" alt="Voltar">
                 </a>
                 <img src="imagens/logo.png" alt="Logo" class="logo">
-                <a href="/menu">
+                <a href="<%= autenticado ? '/menu' : '/cadastro' %>">
                     <div class="profile-container">
                         <img src="<%= autenticado && autenticado.imagem ? '/' + autenticado.imagem : '/imagens/imagem sem cadastro.avif' %>" alt="Foto de perfil" class="profile-pic maria" />
                     </div>
