--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -34,7 +34,7 @@
           <input type="text" placeholder="Buscar...">
         </form>
         <ul>
-          <li><a href="/cadastro"><img src="imagens/imagem sem cadastro.avif" class="maria"></a></li>
+          <li><a href="/cadastro"><img src="/imagens/imagem sem cadastro.avif" class="maria"></a></li>
           <li><a href="/sacola1"><img src="imagens/icone saco.png" class="img-tamanho"></a></li>
           <li><a href="/favoritos"><img src="imagens/icone coraçao.png" class="img-tamanho2"></a></li>
         </ul>
@@ -97,7 +97,7 @@
         </nav>
         <img src="imagens/logo.png" class="logo">
         <a href="/cadastro">
-          <img src="imagens/imagem sem cadastro.avif" class="logo" />
+          <img src="/imagens/imagem sem cadastro.avif" class="logo" />
         </a>
       </nav>
     </header>
