--- a/app/views/pages/menu.ejs
+++ b/app/views/pages/menu.ejs
@@ -34,7 +34,7 @@
                     <% } else { %>
                         <li><a href="/sacola1"><img src="imagens/icone saco.png" class="img-tamanho" alt="Sacola"></a></li>
                     <% } %>
-                    <li><a href="/menu"><img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : '/imagens/icone sem cadastro.png' %>" class="maria" alt="Perfil"></a></li>
+                    <li><a href="/menu"><img src="<%= autenticado && autenticado.imagem ? '/' + autenticado.imagem : '/imagens/imagem sem cadastro.avif' %>" class="maria" alt="Perfil"></a></li>
                     <li><a href="/favoritos"><img src="imagens/icone coraçao.png" class="img-tamanho" alt="Favoritos"></a></li>
                 </ul>
             </section>
@@ -50,7 +50,7 @@
                 </a>
                 <img src="imagens/logo.png" alt="Vintélo">
                 <a href="/menu">
-                    <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : '/imagens/icone sem cadastro.png' %>" alt="Menu" class="maria">
+                    <img src="<%= autenticado && autenticado.imagem ? '/' + autenticado.imagem : '/imagens/imagem sem cadastro.avif' %>" alt="Menu" class="maria">
                 </a>
             </nav>
         </header>
@@ -67,7 +67,7 @@
                 <!-- Sidebar de Navegação -->
                 <aside class="profile-sidebar">
                     <section class="profile-info">
-                        <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : '/imagens/icone sem cadastro.png' %>" alt="Foto de perfil" class="profile-image maria">
+                        <img src="<%= autenticado && autenticado.imagem ? '/' + autenticado.imagem : '/imagens/imagem sem cadastro.avif' %>" alt="Foto de perfil" class="profile-image maria">
                         <h2><%= autenticado && autenticado.nome ? autenticado.nome : 'Usuário' %></h2>
                         <p>@<%= autenticado && autenticado.nome ? autenticado.nome.toLowerCase().replace(/\s+/g, '') : 'usuario' %></p>
                     </section>
